[package]
name = "bundlion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = { version = "0.18.0", features = ["tty-emitter"] }
swc_ecma_parser = "0.104.0"
swc_ecma_ast = "0.78.0"
swc_ecma_dep_graph = "0.76.0"

[dev-dependencies]
cargo-watch = "8.1.1"

[profile.dev]
lto = true
codegen-units = 1
opt-level = "z"